--- a/http-grpc-client/Cargo.toml
+++ b/http-grpc-client/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "ocw-common"
-version = "0.2.0"
+name = "http-grpc-client"
+version = "0.3.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
