--- a/http-grpc-client/Cargo.toml
+++ b/http-grpc-client/Cargo.toml
@@ -8,11 +8,11 @@ edition = "2021"
 [dependencies]
 log = { version = "0.4", default-features = false }
 base64 = { default-features = false, features = ["alloc"], version = "0.21" }
-bytes = { version = "1.1.0", default-features = false }
+bytes = { version = "1", default-features = false }
 # https://github.com/tokio-rs/prost#using-prost-in-a-no_std-crate
 prost = { version = "0.11", default-features = false, features = ["prost-derive"] }
-serde = { version = '1.0', default-features = false }
-serde_json = { version = '1.0', default-features = false, features = ['alloc'] }
+serde = { version = "1", default-features = false }
+serde_json = { version = "1", default-features = false, features = ['alloc'] }
 hex = { version = "0.4", default-features = false, features = ['alloc'] }
 codec = { package = "parity-scale-codec", version = "3", default-features = false, features = [
 	"derive",
