--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,54 +1,41 @@
-name: Build and Test
+name: Build and Test STD
 
 on:
   push:
 
 jobs:
+  ##########################################################################
+  ##########################################################################
   # TODO split test and lint; but that REQUIRE caching else recompile from scratch in between
   rust:
     runs-on: ubuntu-latest
     steps:
-      # install build dependencies
-      # MUST match the same step in Dockerfile
-      # - name: Install dependencies
-      #   run: sudo apt-get update && sudo apt-get install -y libboost-dev
-
-      - uses: Interstellar-Network/gh-actions/prepare@v2
+      ##########################################################################
+      # This is pretty dumb: we MUST call action/checkout BEFORE using a local action...
+      # else: Error: Can't find 'action.yml', 'action.yaml' or 'Dockerfile' under '/home/runner/work/rs-common/rs-common/.github/actions/setup'. Did you forget to run actions/checkout before running your local action?
+      - uses: Interstellar-Network/gh-actions/prepare@v3-dev
         with:
           ssh_key_input: ${{ secrets.SSH_KEY_MACHINE_USER_INTERSTELLAR_CI }}
           install_cmake_and_ninja: false
 
-      - uses: Interstellar-Network/gh-actions/prepare_rust@v2
+      ##########################################################################
+
+      - uses: Interstellar-Network/gh-actions/prepare_rust@v3-dev
         with:
-          toolchain_toolchain: stable
+          toolchain_components: "rustfmt,clippy"
 
-      ##########################################################################
-      # NOTE "protoc-VERSION-HOST.zip"(contains protoc itself)
-      # and "protobuf-cpp-VERSION.tar.gz" contains the source code for eg "src/google/protobuf/port_def.inc"
-      # What we download in CI, and what shared/rust/circuit_evaluate/build.rs expects SHOULD MATCH!
-      # DO NOT change the structure, else build.rs will fail!
-      #
-      # Needed for at least libp2p
-      - name: Install protoc custom prebuilt binary
-        run: |
-          mkdir /home/runner/protoc
-          cd /home/runner/protoc
-          wget https://github.com/protocolbuffers/protobuf/releases/download/v21.12/protoc-21.12-linux-x86_64.zip -O prebuilt.zip
-          unzip prebuilt.zip
-          rm prebuilt.zip
-          echo "PROTOC=/home/runner/protoc/bin/protoc" >> $GITHUB_ENV
-        shell: bash
+      - uses: Interstellar-Network/gh-actions/install-protoc@v3-dev
 
       ##########################################################################
 
-      - uses: Interstellar-Network/gh-actions/rust-build-and-test@v2
+      - uses: Interstellar-Network/gh-actions/rust-build-and-test@v3-dev
         with:
           check_args: --features=with_sp_offchain,with_http_req_std
           test_args: --features=with_sp_offchain,with_http_req_std
 
       ##########################################################################
 
-      - uses: Interstellar-Network/gh-actions/rust-lint@v2
+      - uses: Interstellar-Network/gh-actions/rust-lint@v3-dev
         with:
           clippy_args: --features=with_sp_offchain,with_http_req_std -- -D warnings
 
@@ -62,4 +49,55 @@ jobs:
         run: |
           ccache --show-stats || true
           sccache --show-stats || true
+        shell: bash
+
+  ##########################################################################
+  ##########################################################################
+  sgx:
+    runs-on: ubuntu-latest
+    steps:
+      ##########################################################################
+      # This is pretty dumb: we MUST call action/checkout BEFORE using a local action...
+      # else: Error: Can't find 'action.yml', 'action.yaml' or 'Dockerfile' under '/home/runner/work/rs-common/rs-common/.github/actions/setup'. Did you forget to run actions/checkout before running your local action?
+      - uses: Interstellar-Network/gh-actions/prepare@v3-dev
+        with:
+          ssh_key_input: ${{ secrets.SSH_KEY_MACHINE_USER_INTERSTELLAR_CI }}
+          install_cmake_and_ninja: false
+
+      ##########################################################################
+
+      - uses: Interstellar-Network/gh-actions/prepare_rust@v3-dev
+        with:
+          use_toolchain_toml: "true"
+          toolchain_toml_path: ./tests_sgx/samplecode/project_template/enclave/rust-toolchain.toml
+          toolchain_components: ""
+
+      - uses: Interstellar-Network/gh-actions/install-protoc@v3-dev
+
+      ##########################################################################
+
+      - uses: Interstellar-Network/gh-actions/install-sgx-sdk@v3-dev
+
+      # https://hub.docker.com/r/hashicorp/http-echo/
+      # NOTE: apparently there is no way to pass "run" arguments to a container
+      # using "service"; so we start it manually
+      - name: Start HTTP echo server
+        # TODO remove ccache --clear; only here to debug
+        run: |
+          podman run -d -p 8080:8080 hashicorp/http-echo -listen=:8080 -text="hello world"
+        shell: bash
+
+      # cf core-primitives/enclave-api/build.rs and service/build.rs
+      - name: Build SGX samplecode
+        # TODO remove ccache --clear; only here to debug
+        run: |
+          curl $HTTP_ECHO_URL -v
+          echo http echo OK: $?
+
+          cd tests_sgx
+          export CUSTOM_EDL_PATH=$PWD/edl
+          export CUSTOM_COMMON_PATH=$PWD/common
+          (cd samplecode/project_template && make clean && make && cd bin/ && ./app)
+        env:
+          HTTP_ECHO_URL: "http://localhost:8080/"
         shell: bash
