--- a/http-grpc-client/Cargo.toml
+++ b/http-grpc-client/Cargo.toml
@@ -10,7 +10,9 @@ log = { version = "0.4", default-features = false }
 base64 = { default-features = false, features = ["alloc"], version = "0.21" }
 bytes = { version = "1", default-features = false }
 # https://github.com/tokio-rs/prost#using-prost-in-a-no_std-crate
-prost = { version = "0.11", default-features = false, features = ["prost-derive"] }
+prost = { version = "0.11", default-features = false, features = [
+	"prost-derive",
+] }
 serde = { version = "1", default-features = false }
 serde_json = { version = "1", default-features = false, features = ['alloc'] }
 hex = { version = "0.4", default-features = false, features = ['alloc'] }
@@ -26,8 +28,16 @@ sp-io = { optional = true, default-features = false, git = "https://github.com/p
 # cf app-libs/exchange-oracle/Cargo.toml
 # cf https://github.com/integritee-network/worker/blob/4083b03427890a9aeac0ddc053423b57bf590029/core/rest-client/Cargo.toml
 # http_req: default is "native-tls", but that needs to (cross-)compile openssl-sys which COULD be a pain on Android; In any case, rustls works fine
-http_req = { optional = true, default-features = false, features = ["rust-tls"], branch = "master", git = "https://github.com/integritee-network/http_req" }
-http_req-sgx = { optional = true, default-features = false, features = ["rust-tls", "sgx"], package = "http_req", git = "https://github.com/integritee-network/http_req" }
+http_req = { optional = true, default-features = false, features = [
+	"rust-tls",
+], branch = "master", git = "https://github.com/integritee-network/http_req" }
+http_req-sgx = { optional = true, default-features = false, features = [
+	"rust-tls",
+	"sgx",
+], package = "http_req", git = "https://github.com/integritee-network/http_req" }
+
+# W/A for error: the wasm*-unknown-unknown targets are not supported by default, you may need to enable the "js" feature. For more information see: https://docs.rs/getrandom/#webassembly-support
+getrandom = { version = "0.2", optional = true }
 
 [features]
 default = ["std"]
@@ -38,14 +48,7 @@ with_http_req = []
 with_http_req_std = ["with_http_req", "http_req"]
 with_http_req_sgx = ["with_http_req", "http_req-sgx"]
 with_sp_offchain = ["sp-runtime", "sp-io"]
-std = [
-	"log/std",
-	"hex/std",
-	"sp-runtime?/std",
-	"sp-io?/std",
-	"http_req?/std",
-]
+std = ["log/std", "hex/std", "sp-runtime?/std", "sp-io?/std", "http_req?/std"]
 # core/rest-client/Cargo.toml
-sgx = [
-	"http_req-sgx?/sgx",
-]
+sgx = ["http_req-sgx?/sgx"]
+js = ["http_req/std", "with_http_req_std", "getrandom/js"]
