--- a/ipfs-client-http-req/Cargo.toml
+++ b/ipfs-client-http-req/Cargo.toml
@@ -9,21 +9,25 @@ edition = "2021"
 log = { version = "0.4", default-features = false }
 serde = { version = "1.0", default-features = false, features = ["derive"] }
 serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
-serde_with = { version = "2.1.0", default-features = false, features = ["alloc", "macros"] }
+serde_with = { version = "2.1.0", default-features = false, features = [
+    "alloc",
+    "macros",
+] }
 snafu = { version = "0.7", default-features = false }
 # http_req_sgx = { package = "http_req", git = "https://github.com/mesalock-linux/http_req-sgx", optional = true }
 # default is "native-tls", but that needs to (cross-)compile openssl-sys which COULD be a pain on Android; In ancy case, rustls works fine
 # http_req_std = { package = "http_req", version = "0.9", optional = true, default-features = false, features = ["rust-tls"] }
 sgx_tstd = { branch = "master", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
-http-grpc-client = { default-features = false, git = "https://github.com/Interstellar-Network/rs-common.git", branch = "main" }
+http-grpc-client = { default-features = false, path = "../http-grpc-client" }
 
 [features]
 default = ["std"]
 sgx = ["http-grpc-client/sgx", "sgx_tstd", "http-grpc-client/with_http_req_sgx"]
 std = ["http-grpc-client/std", "http-grpc-client/with_http_req_std"]
+js = ["http-grpc-client/js"]
 
 [dev-dependencies]
-tests-utils = { git = "https://github.com/Interstellar-Network/rs-common", branch = "main" }
+tests-utils = { path = "../tests_utils" }
 tokio = { version = "*", default-features = false, features = ["rt", "macros"] }
 futures = "0.3"
 test-log = "0.2"
