--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -125,6 +125,45 @@ jobs:
           sccache --show-stats || true
         shell: bash
 
+  rust_no_std:
+    runs-on: ubuntu-latest
+    steps:
+      ##########################################################################
+      # This is pretty dumb: we MUST call action/checkout BEFORE using a local action...
+      # else: Error: Can't find 'action.yml', 'action.yaml' or 'Dockerfile' under '/home/runner/work/rs-common/rs-common/.github/actions/setup'. Did you forget to run actions/checkout before running your local action?
+      - uses: Interstellar-Network/gh-actions/prepare@v3-dev
+        with:
+          ssh_key_input: ${{ secrets.SSH_KEY_MACHINE_USER_INTERSTELLAR_CI }}
+          install_cmake_and_ninja: false
+
+      ##########################################################################
+
+      - uses: Interstellar-Network/gh-actions/prepare_rust@v3-dev
+        with:
+          # no particular requirement; but should pin a version else the cache is thrashed everyday
+          toolchain_channel: "nightly-2023-04-15"
+          toolchain_components: ""
+
+      ##########################################################################
+
+      - name: cargo no-std-check
+        run: |
+          cargo install cargo-no-std-check
+          cargo no-std-check --no-default-features --features=reqwless
+        shell: bash
+
+      ##########################################################################
+
+      # TODO move into separate action? ideally into a JS action "post" that setup ccache?
+      # NOTE: remove if using "rust-build-and-test"
+      - name: Print ccache/sccache stats
+        # display stats even if tests failed
+        if: always()
+        run: |
+          ccache --show-stats || true
+          sccache --show-stats || true
+        shell: bash
+
   ##########################################################################
   ##########################################################################
   sgx:
